--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -14,7 +14,7 @@
 					<h2>Welcome to Smart Academy</h2>
 					<p>Sign Up and Start Learning!</p>
 					<div class="alert alert-danger" role="alert" *ngIf="showErrors">
-						<span *ngIf="registrationForm.get('fullName').invalid"> *Please enter a valid full name (ex. Hossam Ahmed)</span><br>
+						<span *ngIf="registrationForm.get('fullName').invalid"> *Please enter a valid full name (ex. Hossam Elkashef)</span><br>
 						<span *ngIf="registrationForm.get('email').invalid"> *Please enter a valid Email (ex. example@gmail.com</span><br>
 						<span *ngIf="registrationForm.get('mobile').invalid"> *Please enter a valid Mobile (ex. 01xxxxxxxxx)</span><br>
 						<!-- <p *ngIf="registrationForm.get('address').invalid"> Please enter a valid Address (minimum length = 11)</p> -->
