--- a/src/app/pages/user/components/confirm/confirm.component.html
+++ b/src/app/pages/user/components/confirm/confirm.component.html
@@ -1,1 +1,5 @@
-<p>confirm works!</p>
+<div class="modal-body text-center animated">
+    <p>{{prompt}}</p>
+    <button type="button" class="btn btn-primary" (click)="confirm()" >Yes</button>
+    <button type="button" class="btn btn-primary" (click)="decline()" >No</button>
+  </div>
