--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -11,7 +11,7 @@
 
             <div class="col-lg-6 col-md-8">
                 <div class="sign_form">
-                    <h2>Request a Password Reset</h2>
+                    <h2>{{'Request a Password Reset' | translate}}</h2>
                     <form>
                         <div class="ui search focus mt-50">
                             <div class="ui left icon input swdh95">
@@ -20,11 +20,11 @@
                                 <i class="uil uil-envelope icon icon2"></i>
                             </div>
                         </div>
-                        <button class="login-btn" type="submit">Reset Password</button>
+                        <button class="login-btn" type="submit">{{'Reset Password' | translate}}</button>
                     </form>
-                    <p class="mb-0 mt-30">Go Back <a [routerLink]="['/login']" routerLinkActive="router-link-active" >Sign In</a></p>
+                    <p class="mb-0 mt-30">Go Back <a [routerLink]="['/login']" routerLinkActive="router-link-active" >{{'Sign In' | translate}}</a></p>
                 </div>
-                <div class="sign_footer"><img src="assets/images/sign_logo.png" alt="">© 2020 <strong>Cursus</strong>.
+                <div class="sign_footer"><img src="assets/images/sign_logo.png" alt="">© 2020 <strong></strong>.
                     All Rights Reserved.</div>
             </div>
         </div>
