--- a/src/app/pages/instructor/components/footer/footer.component.html
+++ b/src/app/pages/instructor/components/footer/footer.component.html
@@ -11,8 +11,8 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <select (change)='changeLanguage($event)'>
-                        <option value="en" [selected]=" _localizationService.getUserLang() === 'en' ">English</option>
-                        <option value="ar" [selected]=" _localizationService.getUserLang() === 'ar' ">Arabic</option>
+                        <option value="en" [selected]=" _localizationService.getUserLang() === 'en' ">{{'English' | translate}}</option>
+                        <option value="ar" [selected]=" _localizationService.getUserLang() === 'ar' ">{{'Arabic' | translate}}</option>
                     </select>
                 </div>
                 <div class="col-lg-12">
