--- a/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
+++ b/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
@@ -2,22 +2,22 @@
     <div class="container">
         <div class="col-lg-12 col-md-12 price_course">
             <div class="basic_ptitle">
-                <h4>Add lectures</h4>
+                <h4>{{"Add lectures" | translate}}</h4>
             </div>
             <div class="alert alert-danger" role="alert" *ngIf="showInfoErrors && lectureForm.invalid">
-                <span *ngIf="lectureForm.get('lectureTitle').invalid"> *Please enter a valid lecture title</span><br>
-                <span  *ngIf="lectureForm.get('lectureFile').invalid && !editMode"> *Please select lecture File</span><br>
-                <span *ngIf="lectureForm.get('sort').invalid"> *Please enter a valid sort</span><br>
-                <span *ngIf="lectureForm.get('description').invalid"> *Please enter a valid description</span><br>
-                <span *ngIf="lectureForm.get('course').invalid"> *Please select course</span><br>
-                <span *ngIf="lectureForm.get('chapter').invalid"> *Please select chapter</span><br>
+                <span *ngIf="lectureForm.get('lectureTitle').invalid"> {{"*Please enter a valid lecture title" | translate}}</span><br>
+                <span  *ngIf="lectureForm.get('lectureFile').invalid && !editMode"> {{"*Please select lecture File" | translate}}</span><br>
+                <span *ngIf="lectureForm.get('sort').invalid">{{" *Please enter a valid sort" | translate}}</span><br>
+                <span *ngIf="lectureForm.get('description').invalid">{{" *Please enter a valid description" | translate}}</span><br>
+                <span *ngIf="lectureForm.get('course').invalid"> {{"*Please select course" | translate}}</span><br>
+                <span *ngIf="lectureForm.get('chapter').invalid"> {{"*Please select chapter" | translate}}</span><br>
 
             </div>
             <form [formGroup]="lectureForm">
                 <div class="row">
                     <div class="col-lg-4 col-md-12">
                         <div class="ui search focus mt-30 lbel25">
-                            <label>Lecture Title*</label>
+                            <label>{{"Lecture Title*" | translate}}</label>
                             <div class="ui left icon input swdh19">
                                 <input formControlName="lectureTitle" class="prompt srch_explore" type="text"
                                     placeholder="Insert your lecture title." name="title"
@@ -28,21 +28,21 @@
                     </div>
                     <div [hidden]="editMode" class="col-lg-4 col-md-6">
                         <div  class="part_input ui search focus mt-30 lbel25">
-                            <label>Upload Video or File*</label>
+                            <label>{{"Upload Video or File*" | translate}}</label>
                             <div  class="input-group">
                                 <div class="custom-file">
                                     <input formControlName="lectureFile" (change)="onFileChange($event)" type="file"
                                         class="custom-file-input" id="inputGroupFile06">
                                     <label class="custom-file-label" for="inputGroupFile06">No
-                                        Choose file -
-                                        (Pdf, Video)</label>
+                                       {{" Choose file -
+                                        (Pdf, Video)" | translate}}</label>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="ui search focus mt-30 lbel25">
-                            <label>Sort</label>
+                            <label>{{"Sort" | translate}}</label>
                             <div class="ui left icon input swdh19">
                                 <input formControlName="sort" class="prompt srch_explore" type="number" name="sort"
                                     min="0" max="100" placeholder="0">
@@ -51,7 +51,7 @@
                     </div>
                     <div class="col-lg-12 col-md-12">
                         <div class="ui search focus mt-30 lbel25">
-                            <label>Lecture Description*</label>
+                            <label>{{"Lecture Description*" | translate}}</label>
                             <div class="course_des_bg">
                                 <div class="textarea_dt">
                                     <div class="ui form swdh339">
@@ -66,20 +66,20 @@
                     </div>
                     <div *ngIf="!editMode" class="col-lg-4 col-md-6">
                         <div class="ui search focus mt-30 lbel25">
-                            <label>Duration*</label>
+                            <label>{{"Duration" | translate}}*</label>
                             <div class="ui left icon input swdh19 swdh55">
                                 <input disabled value="{{videoDuration}}" class="prompt srch_explore" type="number"
                                     min="0" name="duration" required="" placeholder="0">
-                                <div class="badge_min">Minutes</div>
+                                <div class="badge_min">{{"Minutes" | translate}}</div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <div class="ui search focus mt-30 lbel25">
-                            <label>Course*</label>
+                            <label>{{"Course" | translate}}*</label>
                         </div>
                         <select formControlName="course" (change)="onCourseSelect($event)">
-                            <option disabled  value="">Select Course</option>
+                            <option disabled  value="">{{"Select Course" | translate}}</option>
                             <option *ngFor="let course of instructorCourses" value="{{course.id}}">
                                 {{course.course_title}}</option>
 
@@ -87,10 +87,10 @@
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <div class="ui search focus mt-30 lbel25">
-                            <label>Chapter*</label>
+                            <label>{{"Chapter" | translate}}*</label>
                         </div>
                         <select formControlName="chapter">
-                            <option disabled  value="">Select Chapter</option>
+                            <option disabled  value="">{{"Select Chapter" | translate}}</option>
                             <option *ngFor="let chapter of chapters" value="{{chapter.id}}">{{chapter.chapter_title}}</option>
                             
                         </select>
@@ -99,10 +99,10 @@
                         <button (click)="onSaveClick()" class="part_btn_save prt-sv" type="submit">
                              {{editMode ? 'Save Lecture' : 'Create Lecture'}}</button>
                              <button *ngIf="editMode" (click)="onCancelEditChapterClick()" class="part_btn_save prt-sv">
-                                cancel edit</button>
+                                {{"cancel edit" | translate}}</button>
                         <button (click)="getLectures()" class="btn btn-link collapsed" type="button" data-toggle="collapse"
                             data-target="#lecture" aria-expanded="false" aria-controls="lecture">
-                            View Saved Lecture
+                            {{"View Saved Lecture" | translate}}
                         </button>
                     </div>
                     <div class="col-lg-12">
@@ -113,11 +113,11 @@
                                     <table class="table ucp-table">
                                         <thead class="thead-s">
                                             <tr>
-                                                <th scope="col">No</th>
-                                                <th scope="col">Lecture Title</th>
+                                                <th scope="col">{{"No" | translate}}</th>
+                                                <th scope="col">{{"Lecture Title" | translate}}</th>
                                                 <!-- <th scope="col">videos</th> -->
                                                 <th class="text-right" scope="col">
-                                                    Controls</th>
+                                                    {{"Controls" | translate}}</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -164,9 +164,9 @@
 <ng-template #customLoadingTemplate>
     <div class="uploadingTemplate">
         <h3>
-            Loading...
+            {{"Loading..." | translate}}
         </h3>
         <h4>{{uploadingPercentage}} %</h4>
-      <button  class="btn btn-default steps_btn" (click)="onCancelUploadClick()">cancel</button>
+      <button  class="btn btn-default steps_btn" (click)="onCancelUploadClick()">{{"cancel" | translate}}</button>
     </div>
 </ng-template>
